.k8s/apps/degoog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: degoog
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: degoog
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: d44e768c80c4db3fbc00b9414accc38fd4a8f90e
    kubenix/module-instance: degoog
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: degoog
  namespace: apps
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: degoog
      app.kubernetes.io/name: degoog
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: degoog
        app.kubernetes.io/name: degoog
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - lab-pi-bk
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/degoog-org/degoog:latest@sha256:4b3ba6fe7ab6c5ca76ce8aedbd5d07da7423d1043613fae94ff9f1c8acced479
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 4444
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/data
              name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      tolerations:
        - effect: NoSchedule
          key: pi-only
          operator: Equal
          value: "true"
      volumes:
        - name: main
          persistentVolumeClaim:
            claimName: degoog
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.151
    lbipam.cilium.io/sharing-key: degoog
  labels:
    app.kubernetes.io/instance: degoog
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: degoog
    app.kubernetes.io/service: degoog
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: d44e768c80c4db3fbc00b9414accc38fd4a8f90e
    kubenix/module-instance: degoog
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: degoog
  namespace: apps
spec:
  ports:
    - name: http
      port: 4444
      protocol: TCP
      targetPort: 4444
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: degoog
    app.kubernetes.io/name: degoog
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: degoog
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: degoog
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: d44e768c80c4db3fbc00b9414accc38fd4a8f90e
    kubenix/module-instance: degoog
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: degoog
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: degoog.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: degoog
                port:
                  number: 4444
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - degoog.josevictor.me
      secretName: wildcard-tls
